--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,24 +26,73 @@ body {
   position: absolute;
   text-align: center;
   vertical-align: middle;
-  width: 160px;
-  height: 40px;
+  width: 300px;
+  height: 120px;
   padding: 10px;
   font: 14px Work Sans;
   background:#2c3e50;
   border: 0px;
   border-radius: 8px;
   color:white;
-  
+  opacity: 0;
   
 }
 
-#chart {
+/*#chart {
   
   background-color: white;
   
+}*/
+
+
+#tweetbox {
+  
+  display:inline-block;
+  position: absolute;
+  color: #2c3e50;
+  padding-top:20px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  
 }
 
+.profileimage {
+  
+  float:left;
+  
+}
 
+.name {
+  
+  float:left;
+  padding-left: 5px;
+}
 
+.screenname {
+  
+  float:left;
+  padding-left: 5px;
+}
 
+.textRaw {
+  
+  float:left;
+  text-align:left;
+  padding-top: 10px;
+  padding-right: 5px;
+  font-weight:bold;
+}
+
+.time, .place {
+  
+  float:left;
+  text-align:left;
+  padding-right: 5px;
+  font-size:12px;
+}
+
+.boxemoticon {
+  clear:left;
+  float: left;
+  
+}
